# webeye.speed-checker

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/: context.py  dynamodb.py  exceptions.py  main.py  settings.py
src/downtime/: exceptions.py  model.py  persistence.py  service.py
src/monitoring_events/: model.py  persistence.py  service.py
src/monitoring_events/scripts/: exports.py  initialization.js  metricEvaluation.js
src/utils/: bucket.py
